myapp/myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    myapp: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
