myapp/mynetworkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-networkpolicy
  namespace: myapp
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            project: oec
  egress:
  - to:
      - namespaceSelector:
          matchLabels:
            project: oec
